--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     margin-top: 50px;
 }
 .box{
-    border: 2px solid black;
+    border: 1px solid black;
     width: 70px;
     height: 70px;
     margin: 2px;
@@ -15,11 +15,12 @@
     margin-top: auto;
     margin-bottom: auto;
     font-size: 30px;
-
+    margin: 0;
 }
 .black{
-    background-color: black;
+    background-color: rgb(43, 133, 155);
     color: white;
     display: inline-block;
     font-size: 30px;
+    margin: 0;
 }
